--- a/index.html
+++ b/index.html
@@ -28,37 +28,90 @@
 
 <header>
 <div class="content-wrapper">
+  <!-- Logo Image -->
   <a href="#"><img src="" alt="unplugged logo"></a>
-    <div class="header-divider"></div>
-    <nav>
-      <ul>
-        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-        <li><a href="about/index.html" target="_blank">About</a></li>
-      </ul>
-    </nav>
+    <div class="header-divider">
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
 </div>
 </header>
 
 <main>
   <section class="hero-area">
+    <!-- Hero Image -->
     <div class="content-wrapper">
       <h1>Retreat from the desk, return refreshed.</h1>
-  </div>
+    </div>
   </section>
 
   <aside>
     <div class="content-wrapper">
     <div class="form-description">
-      <h3>Want to join the next retreat?</h3>
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <h3>Want to join the next retreat?</h3>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
       </div>
       <div class="form">
-      <h3>Find out more</h3>
-      <input type="text" name="name" value="email address">
-      <input type="button" value="Download Itinerary">
+        <h3>Find out more</h3>
+        <input type="text" name="name" value="">
+        <input type="button" value="Download Itinerary">
       </div>
     </div>
   </aside>
+
+  <section class="features">
+    <div class="content-wrapper">
+      <!-- Add your Features content here -->
+      <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
+    <div class="features-items">
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+      </article>
+
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 gorup meeting rooms, and 4 breakout rooms.</p>
+      </article>
+
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+      </article>
+
+      <article>
+        <p class="fontawesome-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, including private beach &half; mile from bungalow.</p>
+      </article>
+
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Retreat facilitator to manage your day to day activites so you all get a chance to reset.</p>
+      </article>
+
+      <article>
+        <p class="fontawesome-icon"></p>
+        <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+      </article>
+    </div>
+    </div>
+  </section>
+
+  <section class="reviews">
+    <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+      <article>
+      <div>
+        <h3>LaCrue Bottling Co. October 2017</h3>
+        <p>Lorem ipsum dolor sit amet. Ea numquam doloribus et voluptatibus perferendis cum sint reprehenderit! Et reiciendis reiciendis aut similique quidem ut similique temporibus.</p>
+      </div>
+      </article>
+    </div>
+  </section>
 </main>
 
 <footer>
@@ -75,6 +128,8 @@
       <h4>Social</h4>
       <div class="social-icons">
         <p><a href="https://wwww.facebook.com" target="_blank"></a></p>
+        <p><a href="https://wwww.instagram.com" target="_blank"></a></p>
+        <p><a href="https://wwww.twitter.com" target="_blank"></a></p>
       </div>
     </div>
   </div>
