--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,88 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+<header>
+  <div class="content-wrapper">
+    <!-- Logo Image -->
+    <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider">
+        <nav>
+          <ul>
+            <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="about/index.html" target="_blank">About</a></li>
+          </ul>
+        </nav>
+      </div>
+  </div>
+</header>
+
+<main>
+
+<section class="mission">
+  <div class="content-wrapper">
+    <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+    <div class="mission-content">
+      <p>Lorem ipsum dolor sit amet. Ea numquam doloribus et voluptatibus perferendis cum sint reprehenderit! Et reiciendis reiciendis aut similique quidem ut similique temporibus. Cum quod dolorem aut eligendi consequatur sed.</p>>
+      <p></p>Iiure dicta est aliquam nihil qui illum quae et minima quae. Aut voluptas veritatis vel voluptas esse vel tempora et rerum reiciendis qui ducimus porro vel molestias alias. Cum quod dolorem aut eligendi consequatur sed.</p>
+    </div>
+  </div>
+</section>
+
+<section class="map">
+  <figure>
+    <!--Map HERE-->
+  </figure>
+</section>
+
+<section class="contact-section">
+  <div class="content-wrapper">
+    <h2>Contact us, because you all need this.</h2>
+      <address class="contact-content">
+        <div>
+          <h4>General Information</h4>
+          <p>333 Main St. Lake Geneva, WI 53147<br>
+          555-555-5555<br>
+          hello@unplugged.com</p>
+        </div>
+      </address>
+
+      <address>
+        <div>
+          <h4>Chat with a Facilitator</h4>
+          <p>555-555-5555<br>
+          facilitator@unplugged.com</p>
+        </div>
+      </address>
+  </div>
+</section>
+
+</main>
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <h4>Contact</h4>
+        <address>
+            <p>555-555-5555<br>
+            hello@unplugged.com</p>
+        </address>
+      </div>
+      <div class="social">
+        <h4>Social</h4>
+        <div class="social-icons">
+          <p><a href="https://wwww.facebook.com" target="_blank"></a></p>
+          <p><a href="https://wwww.instagram.com" target="_blank"></a></p>
+          <p><a href="https://wwww.twitter.com" target="_blank"></a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>Copyright 2019 | Unplugged</p>
+  </div>
+</footer>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
