--- a/faq/index.html
+++ b/faq/index.html
@@ -25,7 +25,74 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+<header>
+  <div class="content-wrapper">
+    <!-- Logo Image -->
+    <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider">
+        <nav>
+          <ul>
+            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="../about/index.html" target="_blank">About</a></li>
+          </ul>
+        </nav>
+      </div>
+  </div>
+</header>
+
+<main class="faq">
+<div class="content-wrapper">
+  <h2>Frequently Asked Questions</h2>
+
+  <div class="faq-content">
+    <h4>How do I get to the Unplugged retreat?</h4>
+    <p>Non atque deleniti quis quia et voluptatibus nulla sed omnis dolorem sit autem facilis et commodi adipisci. Ea facilis excepturi in dignissimos magni aut dolores enim et distinctio voluptas qui debitis voluptates.</p>
+  </div>
+
+  <div class="faq-content">
+    <h4>What kind of tem is right for the Unpligged retreat?</h4>
+    <p>Non atque deleniti quis quia et voluptatibus nulla sed omnis dolorem sit autem facilis et commodi adipisci. Ea facilis excepturi in dignissimos magni aut dolores enim et distinctio voluptas qui debitis voluptates.</p>
+  </div>
+
+  <div class="faq-content">
+    <h4>What size teams can you accommodate?</h4>
+    <p>Non atque deleniti quis quia et voluptatibus nulla sed omnis dolorem sit autem facilis et commodi adipisci. Ea facilis excepturi in dignissimos magni aut dolores enim et distinctio voluptas qui debitis voluptates.</p>
+  </div>
+
+  <div class="faq-content">
+    <h4>Is there really no wifi available?</h4>
+    <p>Non atque deleniti quis quia et voluptatibus nulla sed omnis dolorem sit autem facilis et commodi adipisci. Ea facilis excepturi in dignissimos magni aut dolores enim et distinctio voluptas qui debitis voluptates.</p>
+  </div>
+</div>
+</main>
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <h4>Contact</h4>
+          <address>
+            <p>555-555-5555<br>
+            hello@unplugged.com</p>
+          </address>
+      </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://wwww.facebook.com" target="_blank"></a></p>
+            <p><a href="https://wwww.instagram.com" target="_blank"></a></p>
+            <p><a href="https://wwww.twitter.com" target="_blank"></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
+
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
