Styling layout with Flexbox

--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
   <div class="content-wrapper">
     <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
     <div class="mission-content">
-      <p>Lorem ipsum dolor sit amet. Ea numquam doloribus et voluptatibus perferendis cum sint reprehenderit! Et reiciendis reiciendis aut similique quidem ut similique temporibus. Cum quod dolorem aut eligendi consequatur sed.</p>>
+      <p>Lorem ipsum dolor sit amet. Ea numquam doloribus et voluptatibus perferendis cum sint reprehenderit! Et reiciendis reiciendis aut similique quidem ut similique temporibus. Cum quod dolorem aut eligendi consequatur sed.</p>
       <p></p>Iiure dicta est aliquam nihil qui illum quae et minima quae. Aut voluptas veritatis vel voluptas esse vel tempora et rerum reiciendis qui ducimus porro vel molestias alias. Cum quod dolorem aut eligendi consequatur sed.</p>
     </div>
   </div>
