--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 <header>
 <div class="content-wrapper">
   <!-- Logo Image -->
-  <a href="#"><img src="" alt="unplugged logo"></a>
+  <figure>
+  <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+  </figure>
     <div class="header-divider">
       <nav>
         <ul>
