--- a/about/index.html
+++ b/about/index.html
@@ -31,12 +31,14 @@
 <header>
   <div class="content-wrapper">
     <!-- Logo Image -->
-    <a href="#"><img src="" alt="unplugged logo"></a>
+    <a href="../index.html">
+      <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+    </a>
       <div class="header-divider">
         <nav>
           <ul>
             <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank">About</a></li>
+            <li><a href="index.html" target="_blank">About</a></li>
           </ul>
         </nav>
       </div>
