--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="content-wrapper">
   <!-- Logo Image -->
   <figure>
-  <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
   </figure>
     <div class="header-divider">
       <nav>
@@ -110,6 +110,9 @@
     <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
       <article>
+        <figure>
+            <img src="img/group-img.jpg" alt="Group image of people outdoors">
+        </figure>
       <div>
         <h3>LaCrue Bottling Co. October 2017</h3>
         <p>Lorem ipsum dolor sit amet. Ea numquam doloribus et voluptatibus perferendis cum sint reprehenderit! Et reiciendis reiciendis aut similique quidem ut similique temporibus.</p>
