Embedded responsive maps on About page

--- a/about/index.html
+++ b/about/index.html
@@ -60,6 +60,7 @@
 <section class="map">
   <figure>
     <!--Map HERE-->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2427.4162266490853!2d13.367237915244955!3d52.525903043544965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851bdf9a60c69%3A0xbf57eec1983e521!2sEuropaplatz%2C%2010557%20Berlin!5e0!3m2!1shu!2sde!4v1639779368534!5m2!1shu!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </figure>
 </section>
 
