--- a/about/index.html
+++ b/about/index.html
@@ -22,6 +22,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">  
 
+  <!-- Icons -->
+  <script src="https://kit.fontawesome.com/155089ed80.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
