--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
+  <!-- Icons -->
+  <script src="https://kit.fontawesome.com/155089ed80.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -74,32 +77,44 @@
       <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
     <div class="features-items">
       <article>
-        <p class="fontawesome-icon"></p>
+        <p class="fontawesome-icon">
+          <i class="fas fa-campground"></i>
+        </p>
         <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
       </article>
 
       <article>
-        <p class="fontawesome-icon"></p>
+        <p class="fontawesome-icon">
+          <i class="fas fa-bed"></i>
+        </p>
         <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 gorup meeting rooms, and 4 breakout rooms.</p>
       </article>
 
       <article>
-        <p class="fontawesome-icon"></p>
+        <p class="fontawesome-icon">
+          <i class="fas fa-utensils"></i>
+        </p>
         <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
       </article>
 
       <article>
-        <p class="fontawesome-icon"></p>
+        <p class="fontawesome-icon">
+          <i class=" fas fa-shoe-prints"></i>
+        </p>
           <p class="features-item-description">5 outdoor obstacle courses, including private beach &half; mile from bungalow.</p>
       </article>
 
       <article>
-        <p class="fontawesome-icon"></p>
+        <p class="fontawesome-icon">
+          <i class="fas fa-smile"></i>
+        </p>
         <p class="features-item-description">Retreat facilitator to manage your day to day activites so you all get a chance to reset.</p>
       </article>
 
       <article>
-        <p class="fontawesome-icon"></p>
+        <p class="fontawesome-icon">
+          <i class="fas fa-wifi"></i>
+        </p>
         <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
       </article>
     </div>
