--- a/index.html
+++ b/index.html
@@ -150,9 +150,15 @@
     <div class="social">
       <h4>Social</h4>
       <div class="social-icons">
-        <p><a href="https://wwww.facebook.com" target="_blank"></a></p>
-        <p><a href="https://wwww.instagram.com" target="_blank"></a></p>
-        <p><a href="https://wwww.twitter.com" target="_blank"></a></p>
+        <p>
+          <a href="https://wwww.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        </p>
+        <p>
+          <a href="https://wwww.instagram.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        </p>
+        <p>
+          <a href="https://wwww.twitter.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </p>
       </div>
     </div>
   </div>
