Fixed final general issues with the layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <figure>
       <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
   </figure>
-    <div class="header-divider">
+    <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
@@ -46,7 +46,6 @@
         </ul>
       </nav>
     </div>
-</div>
 </header>
 
 <main>
