--- a/about/index.html
+++ b/about/index.html
@@ -34,17 +34,18 @@
 <header>
   <div class="content-wrapper">
     <!-- Logo Image -->
+    <figure>
     <a href="../index.html">
       <img src="../img/unpluggedlogo.png" alt="unplugged logo">
     </a>
-      <div class="header-divider">
+    </figure>
+      <div class="header-divider"></div>
         <nav>
           <ul>
             <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
             <li><a href="index.html" target="_blank">About</a></li>
           </ul>
         </nav>
-      </div>
   </div>
 </header>
 
@@ -55,7 +56,7 @@
     <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
     <div class="mission-content">
       <p>Lorem ipsum dolor sit amet. Ea numquam doloribus et voluptatibus perferendis cum sint reprehenderit! Et reiciendis reiciendis aut similique quidem ut similique temporibus. Cum quod dolorem aut eligendi consequatur sed.</p>
-      <p></p>Iiure dicta est aliquam nihil qui illum quae et minima quae. Aut voluptas veritatis vel voluptas esse vel tempora et rerum reiciendis qui ducimus porro vel molestias alias. Cum quod dolorem aut eligendi consequatur sed.</p>
+      <p>Iiure dicta est aliquam nihil qui illum quae et minima quae. Aut voluptas veritatis vel voluptas esse vel tempora et rerum reiciendis qui ducimus porro vel molestias alias. Cum quod dolorem aut eligendi consequatur sed.</p>
     </div>
   </div>
 </section>
@@ -71,16 +72,14 @@
   <div class="content-wrapper">
     <h2>Contact us, because you all need this.</h2>
       <address class="contact-content">
-        <div>
+        <div class="contact-content-info">
           <h4>General Information</h4>
           <p>333 Main St. Lake Geneva, WI 53147<br>
           555-555-5555<br>
           hello@unplugged.com</p>
         </div>
-      </address>
-
-      <address>
-        <div>
+        
+        <div class="contact-content-info">
           <h4>Chat with a Facilitator</h4>
           <p>555-555-5555<br>
           facilitator@unplugged.com</p>
