--- a/faq/index.html
+++ b/faq/index.html
@@ -35,18 +35,19 @@
 <header>
   <div class="content-wrapper">
     <!-- Logo Image -->
+    <figure>
     <a href="../index.html">
       <img src="../img/unpluggedlogo.png" alt="unplugged logo">
     </a>
-      <div class="header-divider">
+  </figure>
+      <div class="header-divider"></div>
         <nav>
           <ul>
             <li><a href="index.html" target="_blank">FAQ</a></li>
             <li><a href="../about/index.html" target="_blank">About</a></li>
           </ul>
         </nav>
-      </div>
-  </div>
+    </div>
 </header>
 
 <main class="faq">
@@ -59,7 +60,7 @@
   </div>
 
   <div class="faq-content">
-    <h4>What kind of tem is right for the Unpligged retreat?</h4>
+    <h4>What kind of team is right for the Unplugged retreat?</h4>
     <p>Non atque deleniti quis quia et voluptatibus nulla sed omnis dolorem sit autem facilis et commodi adipisci. Ea facilis excepturi in dignissimos magni aut dolores enim et distinctio voluptas qui debitis voluptates.</p>
   </div>
 
