--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
   <!-- Icons -->
   <script src="https://kit.fontawesome.com/155089ed80.js" crossorigin="anonymous"></script>
@@ -78,7 +78,7 @@
           555-555-5555<br>
           hello@unplugged.com</p>
         </div>
-        
+
         <div class="contact-content-info">
           <h4>Chat with a Facilitator</h4>
           <p>555-555-5555<br>
